#25 Add jdk9 to test matrix